--- a/CSS/products-style.css
+++ b/CSS/products-style.css
@@ -43,37 +43,46 @@
     background-repeat: no-repeat, no-repeat, no-repeat ;
     background-size: 15%;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
     .illus{
         background-position:
-        top 1% left 0,
-        bottom 60px right 5% ,
-        bottom 60px left 5%;
+        top 3% right 0,
+        bottom 30px right 5% ,
+        bottom 30px left 5%;
+        background-size: 20%;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 576px) {
     .illus{
         background-position:
-        top 25% left 0,
-        bottom 45px right 15% ,
-        bottom 45px left 15%;
+        top 5% right 0,
+        bottom 0 right 5% ,
+        bottom 0 left 5%;
+    }
+}
+@media screen and (min-width: 768px) {
+    .illus{
+        background-position:
+        top 28% right 50px,
+        bottom 40px right 5% ,
+        bottom 40px left 5%;
     }
 }   
 @media screen and (min-width: 1024px) {
     .illus{
         background-position:
         top 27% right 20%,
-        bottom 45px right 20% ,
-        bottom 45px left 20%;
+        bottom 55px right 20% ,
+        bottom 55px left 20%;
+        background-size: 15%;
     }
 }  
 
 .select-section ul{
-    margin-left: 2.5rem;
     display: flex;
     flex-wrap: wrap;
     align-items: center; 
-    justify-content: stretch;
+    justify-content: space-between;
 }
 .select-section ul li{
     box-sizing: border-box;
@@ -87,29 +96,39 @@
     text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
     .select-section ul li{
         width: 7rem;
-        margin: 0.75rem .5rem;
+        margin: 0.5rem 0;
+    }
+    .select-section li a{
+        font-size:  18px;
+        line-height: 2.25;
+    }
+}
+@media screen and (min-width: 576px) {
+    .select-section ul li{
+        width: 6.5rem;
+        margin: 0.75rem 0;
     }
     .select-section ul li:first-child{
         display: block;
     }
     .select-section li a{
         font-size:  18px;
-        line-height: 2.4;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 768px) {
+    .select-section ul li:first-child{
+        display: none;
+    }
     .select-section ul li{
-        width: 9rem;
+        width: 7rem;
         margin: 0.75rem .75rem;
     }
     .select-section li a{
-        font-size: 21px;
-        line-height: 2.25;
+        font-size: 20px;
     }
-
 }
 @media screen and (min-width: 860px) {
     .select-section ul{
@@ -117,17 +136,12 @@
         margin: auto;
     }
     .select-section ul li{
-        width: 9rem;
+        width: 8rem;
         margin: 0.75rem 1.4%;
     }
     .select-section ul li:first-child{
         display: none;
     }
-    .select-section li a{
-        font-size: 21px;
-        line-height: 2.25;
-    }
-
 }    
 @media screen and (min-width: 1024px) {
     .select-section ul li{
@@ -177,21 +191,26 @@ a.card h5{
     font-size: 24px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
     h3{
-        font-size: 32px;
-        padding: 3rem 0 2rem 0;
+        font-size: 28px;
+        padding: 2rem 0 1rem 0;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 576px) {
+    h3{
+        font-size: 32px;
+        padding: 2rem 0 1rem 0;
+    }
+}
+@media screen and (min-width: 768px) {
     h3{
         font-size: 36px;
-        padding: 4rem 0 2rem 0;
+        padding: 2.5 rem 0 1.5rem 0;
     }
 }  
 @media screen and (min-width: 1024px) {
     h3{
-        font-size: 36px;
         padding: 5rem 0 2rem 0;
     }
 }  
