--- a/CSS/productsdetail-style.css
+++ b/CSS/productsdetail-style.css
@@ -33,12 +33,50 @@
     }
 }
 
+@media screen and (min-width: 360px) {
+    .illus{
+        background-image: url(../images/bread-illus/bread-1.png) ,
+        url(../images/bread-illus/bread-6.png);
+    
+        background-repeat: no-repeat, no-repeat;
+        background-position:
+        top 0 right 4rem,
+        top 20% right ;
+        background-size: 20%;
+    }
+}
+@media screen and (min-width: 576px) {
+    .illus{
+        background-image: url(../images/bread-illus/bread-1.png) , 
+        url(../images/bread-illus/bread-6.png),
+        url(../images/bread-illus/bread-4.png) ;
+        background-position:
+        top -10px right 4rem,
+        top 35% right,
+        bottom 30px left 10px;
+        background-size: 20%;
+    }
+}
+@media screen and (min-width: 768px) {
+    .illus{
+        background-image: url(../images/bread-illus/bread-1.png) ,
+        url(../images/bread-illus/bread-6.png) ,
+        url(../images/bread-illus/bread-4.png);
+    
+        background-repeat: no-repeat, no-repeat, no-repeat ,no-repeat;
+        background-position:
+        top 3rem right 4rem,
+        bottom 50% right ,
+        bottom 30px left 10px;
+        background-size: 15%;
+    }
+}
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
     .order-section .sm-pic-list{
         display: none;
-    }
-    .order-section .sm-pic-list{
+    }    
+    .order-section .pic img.full{
         display: none;
     }
     .lg-pic {
@@ -57,17 +95,14 @@
     .lg-pic #lg-pic-list li {
         float: left;
     }
-    
     .lg-pic #lg-pic-list img {
         aspect-ratio: 1/1;
         width: 100%;
     } 
-    
-
     span#pic-number{
         position: absolute;
-        right: 8rem;
-        top: 36rem;
+        right: 2rem;
+        top: 18rem;
         background-color: #9F9393;
         font-size: 18px;
         font-weight: bold;
@@ -90,7 +125,7 @@
     }*/
     #contentButton{
         position: absolute;
-        top: 36rem;
+        top: 18rem;
         left: 0;
         text-align: center;
         height: 3rem;
@@ -112,7 +147,17 @@
         display: none;
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 576px) {
+    #contentButton{
+        top: 28rem;
+    } 
+    span#pic-number{
+        right: 4rem;
+        top: 28rem;
+        padding: 0.5rem 1rem;
+    }
+}
+@media screen and (min-width: 768px) {
     .order-section{
         display: flex;
         flex-wrap: wrap;
@@ -120,10 +165,14 @@
     .order-section .pic{
         width: 52%;
     }
+    .order-section .pic img.full{
+        display: block;
+    }
     .order-section .lg-pic{
         display: none;
     }
     .order-section .sm-pic-list{
+        display: block;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -156,7 +205,7 @@
     padding: .75rem 0 ;
 }
 .price-amount .price span{
-    font-size: 52px;
+    font-size: 48px;
     font-weight: bold;
     color: #60222B;
     padding: 0;
@@ -169,7 +218,7 @@
     background-color: #F0F1F3;
     display: flex;
     width: 50%;
-    padding: 0.25rem 1.25rem;
+    padding: 0.5rem 1.25rem;
 }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -199,40 +248,51 @@ margin: 0;
     background-color: #60222B;
     color: #E6E6E6;
 }
-@media screen and (max-width: 768px) {
-    .order-section .buy{
-        width: 100%;
-        padding-top: 3rem;
-    }
+@media screen and (min-width: 360px) {
     .buy h2{
-        font-size: 36px;
+        margin-top: 2rem;   
     }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 576px) {
+    .order-section .buy{
+        width: 100%;
+    }
+    .buy h2{
+        font-size: 32px;
+    }
+}
+@media screen and (min-width: 768px) {
     .order-section .buy{
         width: calc(48% - 3.75rem);
         margin-left: 3rem;
-        padding-top: 3rem;
+        padding-top: 0m;
     }
     .buy h2{
+        margin: 0;
         font-size: 42px;
     }  
+    .price-amount .amount{
+        flex-grow: 1;
+        margin-top: 1rem;
+    }
 }   
 @media screen and (min-width: 1024px) {
     .order-section .buy{
         margin-left: 3.75rem;
-        padding-top: 6.25rem;
+        padding-top: 6.25rem;       
+    }
+    .price-amount .amount{
+        margin-left: 3rem;
+        margin-top: 1rem;
     }
 }
 
 
 .discription{
     width: 100%;
-    margin-top: 6rem;
 }
 .discription .tab-container ul.tab-title{
     display: flex;
-    padding-left: 46px;
 }
 
 .tab-title {
@@ -255,15 +315,6 @@ ul label.tabs-p{
 ul label.tabs-y{
     color: #9F9393;
 }
-.text p{
-    font-size: 21px;
-    padding: 19px;
-}
-.text  ul li{
-    font-size: 21px;
-    line-height: 180%;
-}
-
 .tab-container input[type ="radio"] {
     display: none;
 }
@@ -292,24 +343,54 @@ ul label.tabs-y{
 label{
     cursor: pointer;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 360px) {
+    .discription{
+        margin-top: 4rem;
+    }
     .tab-container ul label{
-        font-size: 21px;
+        font-size: 18px;
         padding: 0.75rem 0;
-        width: 180px;
+        width: 8.5rem;
     }
     .discription .text{
         padding: 3rem 3rem 0 3rem;
     }
+    .discription .tab-container ul.tab-title{
+        padding-left: 3%;
+    }
 }
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 576px) {
+    .discription{
+        margin-top: 6rem;
+    }
+    .tab-container ul label{
+        font-size: 21px;
+        padding: 0.75rem 0;
+        width: 11rem;
+    }
+    .discription .text{
+        padding: 3rem 3rem 0 3rem;
+    }
+    .discription .tab-container ul.tab-title{
+        padding-left: 10%;
+    }
+}
+@media screen and (min-width: 768px) {
     .tab-container ul label{
         font-size: 24px;
         padding: 1rem 0;
-        width: 200px;
+        width: 12.5rem;
     }
     .discription .text{
         padding: 4rem 4rem 0 4rem;
+    }
+    .text p{
+        font-size: 21px;
+        padding: 1rem;
+    }
+    .text  ul li{
+        font-size: 21px;
+        line-height: 180%;
     }
 }   
 @media screen and (min-width: 1024px) {
