--- a/CSS/productsdetail-style.css
+++ b/CSS/productsdetail-style.css
@@ -96,11 +96,19 @@
         aspect-ratio: 1/1;
         width: 100%;
     } 
-    /* 
+    
     .move-icon{
         position: relative;
         width: 100%;
         top: 45%;
+    }
+    .move-icon i{
+        font-size: 36px;
+        padding: 1rem .5rem;
+        background-color: #9F9393;
+        border-radius: 10px;
+        color: #E9E5DA;
+        opacity: 0.8;
     }
     a#prev{
         position: absolute;
@@ -109,7 +117,7 @@
     a#next{
         position: absolute;
         right: 0rem;
-    }*/
+    }
     #contentButton{
         position: absolute;
         top: 18rem;
