--- a/CSS/products-style.css
+++ b/CSS/products-style.css
@@ -117,11 +117,14 @@
     }
 }
 @media screen and (min-width: 576px) {
+    .select-section ul{ 
+        justify-content: flex-start;
+    }
     .select-section ul li{
         width: 6.5rem;
-        margin: 0.75rem 0;
+        margin: 0.75rem 0.2rem;
     }
-    .select-section ul li:first-child{
+    .select-section ul li:first-child,.select-section ul li:nth-child(2){
         display: block;
     }
     .select-section li a{
@@ -129,8 +132,12 @@
     }
 }
 @media screen and (min-width: 768px) {
-    .select-section ul li:first-child{
+    .select-section ul li:first-child,
+    .select-section ul li:nth-child(2){
         display: none;
+    }
+    .select-section ul{ 
+        justify-content: ce;
     }
     .select-section ul li{
         width: 7rem;
