--- a/CSS/productsdetail-style.css
+++ b/CSS/productsdetail-style.css
@@ -100,15 +100,15 @@
     .move-icon{
         position: relative;
         width: 100%;
-        top: 45%;
+        top: 40%;
     }
     .move-icon i{
         font-size: 36px;
-        padding: 1rem .5rem;
+        padding: .5rem .25rem;
         background-color: #9F9393;
         border-radius: 10px;
         color: #E9E5DA;
-        opacity: 0.8;
+        opacity: 0.7;
     }
     a#prev{
         position: absolute;
@@ -140,14 +140,15 @@
     }
     span#pic-number{
         position: absolute;
-        right: 2rem;
-        top: 18rem;
+        right: 3.5rem;
+        top: 18.5rem;
         background-color: #9F9393;
         font-size: 16px;
         font-weight: bold;
         color: #F0F1F3;
         padding: 0.25rem 0.75rem;
         border-radius: 50px;
+        opacity: 0.9;
     }  
 }
 @media screen and (min-width: 576px) {
@@ -273,9 +274,9 @@ margin: 0;
 }
 .btn-plus, .btn-minus{
     cursor: pointer;
-    flex-grow: 1;
-    padding: 0.55rem 1.2rem;
+    padding: 0.55rem 0.6rem;
 }
+
 /* .btn-plus:hover , .btn-minus:hover{
     background-color:#e6e1dd;
     opacity: 0.1;
